# StudyScape-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py  timetable.py
samples/: 2a.csv  2e.csv
